auth: Add REMOTE_USER env support
Authentication can be delegated to a frontend webserver/middleware, that
will ensure that REMOTE_USER env is set.

Change-Id: I8ebda5fccb0804d3349b84cefbb8353226436c19

--- a/gnocchi/rest/api-paste.ini
+++ b/gnocchi/rest/api-paste.ini
@@ -16,6 +16,12 @@ use = egg:Paste#urlmap
 /v1 = gnocchiv1+keystone
 /healthcheck = healthcheck
 
+[composite:gnocchi+remoteuser]
+use = egg:Paste#urlmap
+/ = gnocchiversions_pipeline
+/v1 = gnocchiv1+noauth
+/healthcheck = healthcheck
+
 [pipeline:gnocchiv1+noauth]
 pipeline = http_proxy_to_wsgi gnocchiv1
 
