--- a/setup.cfg
+++ b/setup.cfg
@@ -128,6 +128,7 @@ gnocchi.rest.auth_helper =
     noauth = gnocchi.rest.auth_helper:NoAuthHelper
     keystone = gnocchi.rest.auth_helper:KeystoneAuthHelper
     basic = gnocchi.rest.auth_helper:BasicAuthHelper
+    remoteuser = gnocchi.rest.auth_helper:RemoteUserAuthHelper
 
 console_scripts =
     gnocchi-config-generator = gnocchi.cli:config_generator
