--- a/.travis.yml
+++ b/.travis.yml
@@ -39,5 +39,6 @@ notifications:
   irc:
     on_success: change
     on_failure: always
+    skip_join: true
     channels:
       - "irc.freenode.org#gnocchi"
