--- a/gnocchi/tests/gabbi/gabbits/resource-aggregation.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource-aggregation.yaml
@@ -43,6 +43,22 @@ tests:
           value: 12
       status: 202
 
+    - name: get aggregation with no data
+      desc: https://github.com/gnocchixyz/gnocchi/issues/69
+      POST: /v1/aggregation/resource/generic/metric/cpu.util?stop=2012-03-06T00:00:00&fill=0&granularity=300&resample=3600
+      request_headers:
+        x-user-id: 6c865dd0-7945-4e08-8b27-d0d7f1c2b667
+        x-project-id: c7f32f1f-c5ef-427a-8ecd-915b219c66e8
+        content-type: application/json
+      data:
+        =:
+          id: 4ed9c196-4c9f-4ba8-a5be-c9a71a82aac4
+      poll:
+        count: 10
+        delay: 1
+      response_json_paths:
+        $: []
+
     - name: create resource 2
       POST: /v1/resource/generic
       request_headers:
