--- a/setup.cfg
+++ b/setup.cfg
@@ -120,6 +120,7 @@ gnocchi.indexer =
     mysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
     mysql+pymysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
     postgresql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
+    postgresql+psycopg2 = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
 
 gnocchi.aggregates =
     moving-average = gnocchi.aggregates.moving_stats:MovingAverage
