Remove devstack gate support
This is not used anymore after the move to GitHub.

--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE 
 
 [testenv:bashate]
 deps = bashate
-commands = bashate -v devstack/plugin.sh devstack/gate/gate_hook.sh devstack/gate/post_test_hook.sh
+commands = bashate -v devstack/plugin.sh
 whitelist_externals = bash
 
 [testenv:pep8]
