tests: Update travis/tox configuration
Travis ressources for opensource project is limited

This change will limit the number of jobs per PR in parallel, allowing
more PR to be processed at the same time.

And remove the build of the image of each commit (save 3-4 minutes).
It pulls the image from dockerhub (I will create a new repo to have
this image updated automatically).

It's run in parallel tests of differents storage system.

The overall time of testing is still ~40 minutes, but now we use only 3
jobs instead of 10.

(cherry picked from commit 2ce477320864df3b243e22642915b25480850e08)
(cherry picked from commit 79fc8c43aa37c46dc16d8453de92734993dc0040)

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ before_script:
         git fetch --unshallow --tags;
         ;;
     esac
-  - docker build --tag gnocchi-ci --file=tools/travis-ci-setup.dockerfile .
 install:
+  - docker pull gnocchixyz/ci-tools:latest
 script:
-  - docker run -v ~/.cache/pip:/home/tester/.cache/pip -v $(pwd):/home/tester/src gnocchi-ci tox -e ${TARGET}
+  - docker run -v ~/.cache/pip:/home/tester/.cache/pip -v $(pwd):/home/tester/src gnocchixyz/ci-tools:latest tox -e ${TARGET}
 
 notifications:
   email: false
