tests: Update travis/tox configuration
Travis ressources for opensource project is limited

This change will limit the number of jobs per PR in parallel, allowing
more PR to be processed at the same time.

And remove the build of the image of each commit (save 3-4 minutes).
It pulls the image from dockerhub (I will create a new repo to have
this image updated automatically).

It's run in parallel tests of differents storage system.

The overall time of testing is still ~40 minutes, but now we use only 3
jobs instead of 10.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,31 +8,20 @@ cache:
   directories:
     - ~/.cache/pip
 env:
-  - TARGET: bashate
-  - TARGET: pep8
-  - TARGET: docs
-  - TARGET: docs-gnocchi.xyz
-
-  - TARGET: py27-mysql-ceph-upgrade-from-3.1
-  - TARGET: py35-postgresql-file-upgrade-from-3.1
-
-  - TARGET: py27-mysql
-  - TARGET: py35-mysql
-  - TARGET: py27-postgresql
-  - TARGET: py35-postgresql
+  - TARGETS: pep8,docs,docs-gnocchi.xyz,py27-mysql-ceph-upgrade-from-3.1,py35-postgresql-file-upgrade-from-3.1
+  - TARGETS: py27
+  - TARGETS: py35
 
 before_script:
   # Travis We need to fetch all tags/branches for documentation target
-  - case $TARGET in
-      docs*)
+  - case $TARGETS in
+      *docs*)
         git config --add remote.origin.fetch +refs/heads/stable/*:refs/remotes/origin/stable/*;
         git fetch --unshallow --tags;
         ;;
     esac
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then git pull --rebase ; fi'
-  - docker build --tag gnocchi-ci --file=tools/travis-ci-setup.dockerfile .
 script:
-  - docker run -v ~/.cache/pip:/home/tester/.cache/pip -v $(pwd):/home/tester/src gnocchi-ci tox -e ${TARGET}
+  - docker run -v ~/.cache/pip:/home/tester/.cache/pip -v $(pwd):/home/tester/src gnocchixyz/ci-tools:latest tox -e ${TARGETS}
 
 notifications:
   email: false
