--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ doc =
     Jinja2
     reno>=1.6.2
 test =
-    pifpaf>=1.0.1
+    pifpaf[ceph]>=1.0.1
     gabbi>=1.30.0
     coverage>=3.6
     fixtures
