Install pifpaf with ceph extra
Some extra dependency in pifpaf are now set as flavors, such as ceph.

(cherry picked from commit 4e8089eb77216695d69080b9e148f18d1210c7a8)

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ doc =
     Jinja2
     reno>=1.6.2
 test =
-    pifpaf>=0.2.0
+    pifpaf[ceph]>=0.2.0
     gabbi>=1.21.0
     coverage>=3.6
     fixtures
