Remove oslotest dependency
Oslotest is OpenStack specific and we actually don't use any of its feature
except stdout redirection and log silencing, which is really provided by
`fixtures' and `daiquiri'.
Remove it and use testtools directly. This avoids having OS_* variables used
everywhere and makes sure we don't pull dependencies we don't need (mox3,
os-client-config, etc).

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py{35,27}-{postgresql,mysql}{,-file,-swift,-ceph,-s3},pep8
 [testenv]
 usedevelop = True
 sitepackages = False
-passenv = LANG OS_DEBUG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE GNOCCHI_TEST_* AWS_*
+passenv = LANG GNOCCHI_TEST_* AWS_*
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVER=file
     GNOCCHI_TEST_INDEXER_DRIVER=postgresql
@@ -85,7 +85,7 @@ commands = flake8
            bashate -v devstack/plugin.sh
 
 [testenv:py27-gate]
-setenv = OS_TEST_PATH=gnocchi/tests/functional_live
+setenv = GNOCCHI_TEST_PATH=gnocchi/tests/functional_live
          GABBI_LIVE=1
 passenv = {[testenv]passenv} GNOCCHI_SERVICE* GNOCCHI_AUTHORIZATION
 sitepackages = True
@@ -95,7 +95,7 @@ commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
 # This target provides a shortcut to running just the gabbi tests.
 [testenv:py27-gabbi]
 deps = .[test,postgresql,file]
-setenv = OS_TEST_PATH=gnocchi/tests/functional
+setenv = GNOCCHI_TEST_PATH=gnocchi/tests/functional
 basepython = python2.7
 commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
