doc: Add missing oslotest for old docs

--- a/tox.ini
+++ b/tox.ini
@@ -135,6 +135,7 @@ deps = {[testenv:docs]deps}
        pytimeparse
        retrying
 # for 3.x doc
+       oslotest
        oslosphinx
 commands =
     pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- sphinx-versioning build doc/source doc/build/html
