--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,32 @@ deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.1,<3.2
   pifpaf[ceph]>=0.13
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
+[testenv:py35-postgresql-file-upgrade-from-4.0]
+# We should always recreate since the script upgrade
+# Gnocchi we can't reuse the virtualenv
+envdir = upgrade
+recreate = True
+skip_install = True
+usedevelop = False
+setenv = GNOCCHI_VARIANT=test,postgresql,file
+deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
+  pifpaf>=0.13
+  gnocchiclient>=2.8.0
+commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
+
+[testenv:py27-mysql-ceph-upgrade-from-4.0]
+# We should always recreate since the script upgrade
+# Gnocchi we can't reuse the virtualenv
+envdir = upgrade
+recreate = True
+skip_install = True
+usedevelop = False
+setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
+deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
+  gnocchiclient>=2.8.0
+  pifpaf[ceph]>=0.13
+commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
+
 [testenv:pep8]
 deps = hacking>=0.12,<0.13
        bashate
