redis: add notification mechanism support

--- a/setup.cfg
+++ b/setup.cfg
@@ -124,6 +124,9 @@ gnocchi.indexer =
     postgresql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
     postgresql+psycopg2 = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
 
+gnocchi.notifier =
+    redis = gnocchi.notifier.redis:RedisNotifier
+
 gnocchi.aggregates =
     moving-average = gnocchi.aggregates.moving_stats:MovingAverage
 
