Make gnocchi-api wrap uWSGI
As the wise Mehdi once said: "nobody reads documentation".
Everybody wants to run a daemon for the API server and everybody wants to run
`gnocchi-api'. Then let's provide it as a wrapper around uwsgi, so it's a fast
and performant HTTP by default.

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,9 @@ pre-hook.build_config = gnocchi.genconfig.prehook
 packages =
     gnocchi
 
+scripts =
+    gnocchi/rest/gnocchi-api
+
 [entry_points]
 gnocchi.indexer.sqlalchemy.resource_type_attribute =
     string = gnocchi.indexer.sqlalchemy_extension:StringSchema
@@ -135,9 +138,6 @@ console_scripts =
     gnocchi-change-sack-size = gnocchi.cli:change_sack_size
     gnocchi-statsd = gnocchi.cli:statsd
     gnocchi-metricd = gnocchi.cli:metricd
-
-wsgi_scripts =
-    gnocchi-api = gnocchi.rest.app:build_wsgi_app
 
 oslo.config.opts =
     gnocchi = gnocchi.opts:list_opts
