--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ skip_install = True
 usedevelop = False
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.1,<3.2
-  pifpaf>=0.13
+  pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
@@ -70,7 +70,7 @@ usedevelop = False
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.1,<3.2
   gnocchiclient>=2.8.0
-  pifpaf[ceph]>=0.13
+  pifpaf[ceph,gnocchi]>=0.13
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py35-postgresql-file-upgrade-from-4.0]
@@ -82,7 +82,7 @@ skip_install = True
 usedevelop = False
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
-  pifpaf>=0.13
+  pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
@@ -96,7 +96,7 @@ usedevelop = False
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
   gnocchiclient>=2.8.0
-  pifpaf[ceph]>=0.13
+  pifpaf[ceph,gnocchi]>=0.13
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:pep8]
