Install gnocchi flavor of pifpaf
So we have uwsgi pulled.

(cherry picked from commit 38477d4d9d36f653f560d2d18fba53225a278653)

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ doc =
     Jinja2
     reno>=1.6.2
 test =
-    pifpaf[ceph]>=0.12.0
+    pifpaf[ceph,gnocchi]>=0.12.0
     gabbi>=1.21.0
     coverage>=3.6
     fixtures
