--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ skip_install = True
 usedevelop = False
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
-  pifpaf>=0.13
+  pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
@@ -55,7 +55,7 @@ usedevelop = False
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
   gnocchiclient>=2.8.0
-  pifpaf[ceph]>=0.13
+  pifpaf[ceph,gnocchi]>=0.13
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py35-postgresql-file-upgrade-from-2.2]
@@ -67,7 +67,7 @@ skip_install = True
 usedevelop = False
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=2.2,<2.3
-  pifpaf>=0.13
+  pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
@@ -81,7 +81,7 @@ usedevelop = False
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=2.2,<2.3
   gnocchiclient>=2.8.0
-  pifpaf[ceph]>=0.13
+  pifpaf[ceph,gnocchi]>=0.13
   cradox
 # cradox is required because 2.2 extra names are incorrect
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
