DNM: debug uwsgi bind() already in use error

--- a/tox.ini
+++ b/tox.ini
@@ -43,8 +43,8 @@ setenv =
 deps = .[test,redis,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
    {env:GNOCCHI_TEST_TARBALLS:}
 commands =
-    doc8 doc/source
-    {toxinidir}/run-tests.sh {posargs}
+    # doc8 doc/source
+    # {toxinidir}/run-tests.sh {posargs}
     {toxinidir}/run-func-tests.sh {posargs}
 
 [testenv:py35-postgresql-file-upgrade-from-3.1]
