Allow to transform measures
This change adds an API to transform retrieved measurements.

First method implemented are absolute and negative. This API aims
to do some transformations that are not aggregation related.

This also fixes the data type passed to aggregated(), to ensure it's a
list and not an iterator.

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -270,6 +270,9 @@
 - name: get-measures-granularity
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?granularity=1 HTTP/1.1
 
+- name: get-measures-transform
+  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?transform=absolute:negative HTTP/1.1
+
 - name: get-measures-refresh
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?refresh=true HTTP/1.1
 
