--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -277,7 +277,7 @@
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?refresh=true HTTP/1.1
 
 - name: get-measures-resample
-  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?resample=5&granularity=1 HTTP/1.1
+  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?granularity=1&transform=resample(5) HTTP/1.1
 
 - name: create-resource-generic
   request: |
