--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ oslo.config>=3.22.0
 oslo.policy>=0.3.0
 oslo.middleware>=3.22.0
 pandas>=0.18.0
+pytimeparse
 scipy>=0.18.1  # BSD
 pecan>=0.9
 futures
