--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,7 @@ cache:
   directories:
     - ~/.cache/pip
 env:
-  - TARGET: pep8
-  - TARGET: docs
-  - TARGET: docs-gnocchi.xyz
-
-  - TARGET: py27-mysql-ceph-upgrade-from-3.1
-  - TARGET: py35-postgresql-file-upgrade-from-3.1
-  - TARGET: py27-mysql-ceph-upgrade-from-4.0
-  - TARGET: py35-postgresql-file-upgrade-from-4.0
-
   - TARGET: py27-mysql
-  - TARGET: py35-mysql
-  - TARGET: py27-postgresql
-  - TARGET: py35-postgresql
 
 before_script:
   # Travis We need to fetch all tags/branches for documentation target
@@ -36,7 +24,7 @@ before_script:
 install:
   - docker pull gnocchixyz/ci-tools:latest
 script:
-  - docker run -v ~/.cache/pip:/home/tester/.cache/pip -v $(pwd):/home/tester/src gnocchixyz/ci-tools:latest tox -e ${TARGET}
+  - docker run -v ~/.cache/pip:/home/tester/.cache/pip -v $(pwd):/home/tester/src gnocchixyz/ci-tools:latest tox -e ${TARGET} gabbi
 
 notifications:
   email: false
