rest: fix ACL enforcement for non-admin on metric list
The current metric listing on /v1/metric does not enforce correctly the
attribute filtering on the creator field when the user is non-admin.

That means the attr_filter is empty and a non-admin can actually list all
metrics for all users.

This fixes that by setting the filter correctly.

(cherry picked from commit 2be95704a18229e4d05e57dd3e96de489a16e61d)

--- a/gnocchi/tests/gabbi/gabbits/base.yaml
+++ b/gnocchi/tests/gabbi/gabbits/base.yaml
@@ -77,6 +77,9 @@ tests:
 - name: list the one metric
   GET: /v1/metric
   status: 200
+  request_headers:
+    x-user-id: 93180da9-7c15-40d3-a050-a374551e52ee
+    x-project-id: 99d13f22-3618-4288-82b8-6512ded77e4f
   response_json_paths:
       $[0].archive_policy.name: test1
 
