--- a/gnocchi/tests/functional/gabbits/metric.yaml
+++ b/gnocchi/tests/functional/gabbits/metric.yaml
@@ -242,6 +242,18 @@ tests:
           - ["2015-03-06T14:36:15+00:00", 1.0, 16.0]
           - ["2015-03-06T14:37:15+00:00", 1.0, 23.0]
 
+    - name: rolling-mean transform
+      GET: /v1/metric/$HISTORY['list valid metrics'].$RESPONSE['$[0].id']/measures?transform=rolling(mean,2)
+      status: 200
+      response_json_paths:
+        $:
+          - ["2015-03-06T14:34:12+00:00", 1.0, 27.55]
+          - ["2015-03-06T14:34:15+00:00", 1.0, 14.0]
+          - ["2015-03-06T14:35:12+00:00", 1.0, 12.5]
+          - ["2015-03-06T14:35:15+00:00", 1.0, 10.0]
+          - ["2015-03-06T14:36:15+00:00", 1.0, -2.5]
+          - ["2015-03-06T14:37:15+00:00", 1.0, -19.5]
+
     - name: get measurements from metric and two transforms
       GET: /v1/metric/$HISTORY['list valid metrics'].$RESPONSE['$[0].id']/measures?transform=absolute:negative
       response_json_paths:
@@ -273,6 +285,14 @@ tests:
       status: 400
       response_strings:
         - 'transform and resample are exclusive'
+
+    - name: get rolling bad aggregate
+      GET: /v1/metric/$HISTORY['list valid metrics'].$RESPONSE['$[0].id']/measures?transform=rolling(blah,2)
+      status: 400
+
+    - name: get rolling-mean missing window
+      GET: /v1/metric/$HISTORY['list valid metrics'].$RESPONSE['$[0].id']/measures?transform=rolling(mean)
+      status: 400
 
     - name: create valid metric two
       POST: /v1/metric
