transformation: allow to do math
This change introduces a math() transformer to do simple
mathematics on each points of the timeserie.

It uses numexpr library of pydata project.

Releasenote have not been added because it already have a generic entry
for the new transforamtion API

Closes-bug: #342

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -271,7 +271,7 @@
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?granularity=1 HTTP/1.1
 
 - name: get-measures-transform
-  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?transform=absolute:negative HTTP/1.1
+  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?transform=absolute:math(v%20*%20-1) HTTP/1.1
 
 - name: get-measures-refresh
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?refresh=true HTTP/1.1
