--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ deps = .[test,postgresql,file,doc]
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
          GNOCCHI_TEST_INDEXER_DRIVER=postgresql
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
-           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx
+           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
 
 [testenv:docs-gnocchi.xyz]
 deps = .[file,postgresql,test,doc]
