--- a/tox.ini
+++ b/tox.ini
@@ -143,7 +143,9 @@ commands = doc8 --ignore-path doc/source/rest.rst,doc/source/comparison-table.rs
 
 [testenv:docs-gnocchi.xyz]
 basepython = python2.7
+whitelist_externals = bash
 setenv = GNOCCHI_STORAGE_DEPS=file
+         GNOCCHI_TEST_DEBUG=1
 deps = {[testenv:docs]deps}
        sphinxcontrib-versioning
 # for 3.x doc
@@ -152,6 +154,7 @@ deps = {[testenv:docs]deps}
        retrying
 commands =
     pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- sphinx-versioning build doc/source doc/build/html
+    bash tools/validate_docs.sh
 
 [doc8]
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
