Add promeutheus storage adapter

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,9 @@ ceph_recommended_lib =
     cradox>=1.2.0
 ceph_alternative_lib =
     python-rados>=12.2.0 # not available on pypi
+prometheus =
+    python-snappy
+    protobuf
 doc =
     sphinx<1.6.0
     sphinx_rtd_theme
