--- a/tox.ini
+++ b/tox.ini
@@ -40,8 +40,9 @@ setenv =
 # NOTE(jd) Install redis as a test dependency since it is used as a
 # coordination driver in functional tests (--coordination-driver is passed to
 # pifpaf)
-deps = .[test,redis,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
+deps = .[test,redis,prometheus,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
    {env:GNOCCHI_TEST_TARBALLS:}
+   cliff!=2.9.0
 commands =
     doc8 doc/source
     {toxinidir}/run-tests.sh {posargs}
@@ -150,7 +151,7 @@ deps = {[testenv:docs]deps}
 commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- {posargs}
 
 [flake8]
-exclude = .tox,.eggs,doc
+exclude = .tox,.eggs,doc,gnocchi/rest/prometheus/remote_pb2.py
 show-source = true
 enable-extensions = H904
 
