--- a/setup.cfg
+++ b/setup.cfg
@@ -124,6 +124,7 @@ console_scripts =
     gnocchi-upgrade = gnocchi.cli.manage:upgrade
     gnocchi-change-sack-size = gnocchi.cli.manage:change_sack_size
     gnocchi-statsd = gnocchi.cli.statsd:statsd
+    gnocchi-amqp1d = gnocchi.cli.amqp1d:amqp1d
     gnocchi-metricd = gnocchi.cli.metricd:metricd
 
 oslo.config.opts =
