--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -301,14 +301,11 @@
 - name: get-measures-granularity
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?granularity=1 HTTP/1.1
 
-- name: get-measures-transform
-  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?transform=absolute:negative HTTP/1.1
-
 - name: get-measures-refresh
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?refresh=true HTTP/1.1
 
 - name: get-measures-resample
-  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?granularity=1&transform=resample(5) HTTP/1.1
+  request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures?granularity=1&resample=5 HTTP/1.1
 
 - name: create-resource-generic
   request: |
