gabbi/pytest: increase run speed

--- a/tox.ini
+++ b/tox.ini
@@ -178,6 +178,5 @@ commands =
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
 
 [pytest]
-# NOTE(sileht): loadscope is needed to ensure gabbi tests are ran into the same worker
-addopts = --verbose --dist=loadscope --numprocesses=auto
+addopts = --verbose --numprocesses=auto
 norecursedirs = .tox
