api: don't raise 400 in MeasuresListSchema
voluptous schema must not abort() but raise an exception
otherwise, we can't mix them in voluptous.Any/voluptous.All/...

--- a/gnocchi/tests/functional/gabbits/batch-measures.yaml
+++ b/gnocchi/tests/functional/gabbits/batch-measures.yaml
@@ -275,4 +275,4 @@ tests:
             - [ "2015-03-06T14:34:12", 12]
       status: 400
       response_strings:
-        - "Invalid format for measures"
+        - "unexpected measures format"
