tests: test upgrade from Gnocchi 4.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ env:
   - TARGET: py35-postgresql-file-upgrade-from-4.0
   - TARGET: py27-mysql-ceph-upgrade-from-4.1
   - TARGET: py35-postgresql-file-upgrade-from-4.1
+  - TARGET: py27-mysql-ceph-upgrade-from-4.2
+  - TARGET: py35-postgresql-file-upgrade-from-4.2
 
   - TARGET: py27-mysql
   - TARGET: py35-mysql
