storage: rocksdb driver

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,6 +81,9 @@ ceph_alternative =
 prometheus =
     python-snappy
     protobuf
+rocksdb =
+    python-rocksdb
+    Cython>=0.20
 doc =
     sphinx<1.6.0
     sphinx_rtd_theme
@@ -118,6 +121,7 @@ gnocchi.storage =
     swift = gnocchi.storage.swift:SwiftStorage
     ceph = gnocchi.storage.ceph:CephStorage
     file = gnocchi.storage.file:FileStorage
+    rocksdb = gnocchi.storage.rocksdb:RocksDBStorage
     s3 = gnocchi.storage.s3:S3Storage
     redis = gnocchi.storage.redis:RedisStorage
 
