--- a/tox.ini
+++ b/tox.ini
@@ -10,13 +10,14 @@ passenv = LANG GNOCCHI_TEST_* AWS_*
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVER=file
     GNOCCHI_TEST_INDEXER_DRIVER=postgresql
-    GNOCCHI_TEST_STORAGE_DRIVERS=file swift ceph s3 redis
+    GNOCCHI_TEST_STORAGE_DRIVERS=file swift ceph s3 redis rocksdb
     GNOCCHI_TEST_INDEXER_DRIVERS=postgresql mysql
     file: GNOCCHI_TEST_STORAGE_DRIVERS=file
     swift: GNOCCHI_TEST_STORAGE_DRIVERS=swift
     ceph: GNOCCHI_TEST_STORAGE_DRIVERS=ceph
     redis: GNOCCHI_TEST_STORAGE_DRIVERS=redis
     s3: GNOCCHI_TEST_STORAGE_DRIVERS=s3
+    rocksdb: GNOCCHI_TEST_STORAGE_DRIVERS=rocksdb
     postgresql: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
     mysql: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
 
@@ -26,6 +27,7 @@ setenv =
     file: GNOCCHI_STORAGE_DEPS=file
     redis: GNOCCHI_STORAGE_DEPS=redis
     s3: GNOCCHI_STORAGE_DEPS=s3
+    rocksdb: GNOCCHI_STORAGE_DEPS=rocksdb
 
     GNOCCHI_INDEXER_DEPS=mysql,postgresql
     mysql: GNOCCHI_INDEXER_DEPS=mysql
@@ -38,6 +40,7 @@ setenv =
     s3: GNOCCHI_TEST_TARBALLS=
     redis: GNOCCHI_TEST_TARBALLS=
     file: GNOCCHI_TEST_TARBALLS=
+    rocksdb: GNOCCHI_TEST_TARBALLS=
 # NOTE(jd) Install redis as a test dependency since it is used as a
 # coordination driver in functional tests (--coordination-driver is passed to
 # pifpaf)
