allow to generate a pex executable
Howto use:

$ tox -epy35-pex
$ dist/gnocchi-4.2.1.dev69-py35-linux_x86_64 config-generator > gnocchi.conf
$ dist/gnocchi-4.2.1.dev69-py35-linux_x86_64 api --config-file gnocchi.conf

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,20 @@
 *.pyc
 .tox
 *.egg-info
+.eggs
+.pex
 AUTHORS
 ChangeLog
 etc/gnocchi/gnocchi.conf
 gnocchi/rest/gnocchi-api
 doc/build
 doc/source/rest.rst
+doc/source/pex.rst
 doc/source/gnocchi.conf.sample
 releasenotes/build
 cover
 .coverage
 dist
+!doc/source/dist
+doc/source/dist/gnocchi-*
 upgrade/
