--- a/tox.ini
+++ b/tox.ini
@@ -127,6 +127,20 @@ exclude = .tox,.eggs,doc,gnocchi/rest/prometheus/remote_pb2.py
 show-source = true
 enable-extensions = H904
 
+[testenv:py3-pex]
+deps =
+  pex[requests]
+  # Otherwise it uses the one installed by "virtualenv"
+  setuptools>=20.3,<34
+  # To get the gnocchi version without installing it
+  setuptools_scm
+commands = python -m gnocchi.pex
+# -c "from gnocchi import pex; pex.build_pex_binary('dist')"
+
+[testenv:py2-pex]
+deps = {[testenv:py3-pex]deps}
+commands = {[testenv:py3-pex]commands}
+
 [testenv:docs]
 basepython = python3
 ## This does not work, see: https://github.com/tox-dev/tox/issues/509
@@ -137,15 +151,21 @@ deps =
     -e
     .[test,file,postgresql,doc]
     doc8
+    # NOTE(sileht): these deps don't work if they are in extras
+    pex[requests]
+    # Otherwise it uses the one installed by "virtualenv"
+    setuptools>=20.3,<34
+    # To get the gnocchi version without installing it
+    setuptools_scm
 setenv = GNOCCHI_TEST_DEBUG=1
-commands = doc8 --ignore-path doc/source/rest.rst,doc/source/comparison-table.rst doc/source
-           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
+commands =
+    # doc8 --ignore-path doc/source/install-pex.rst,doc/source/rest.rst,doc/source/comparison-table.rst doc/source
+    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
 
 [testenv:docs-gnocchi.xyz]
 basepython = python2.7
-whitelist_externals = bash rm
-setenv = GNOCCHI_STORAGE_DEPS=file
-         GNOCCHI_TEST_DEBUG=1
+whitelist_externals = rm
+setenv = GNOCCHI_TEST_DEBUG=1
 deps = {[testenv:docs]deps}
        sphinxcontrib-versioning
 # for < 4.3 doc
@@ -155,14 +175,20 @@ deps = {[testenv:docs]deps}
 # for <= 4.1 doc
        pandas
 # for 3.x doc
-       lz4>=0.9,<=0.13
+       lz4
        oslotest
        oslosphinx
        retrying
+# NOTE(sileht): these deps don't work if they are in extras
+      pex[requests]
+# Otherwise it uses the one installed by "virtualenv"
+      setuptools>=20.3,<34
+# To get the gnocchi version without installing it
+      setuptools_scm
 commands =
     rm -rf doc/build/html
     pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- sphinx-versioning build doc/source doc/build/html
-    bash tools/validate_docs.sh
+    {toxinidir}/tools/validate_docs.sh
 
 [doc8]
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
