Added amqp1.0 collectd daemon
This enables gnocchi-amqp daemon.

Which listens to metrics from collectd amqp1 write plugin.

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,6 +82,8 @@ ceph_alternative =
 prometheus =
     python-snappy
     protobuf
+amqp1:
+    python-qpid-proton>=0.17.0
 doc =
     sphinx<1.6.0
     sphinx_rtd_theme
@@ -145,6 +147,7 @@ console_scripts =
     gnocchi-upgrade = gnocchi.cli.manage:upgrade
     gnocchi-change-sack-size = gnocchi.cli.manage:change_sack_size
     gnocchi-statsd = gnocchi.cli.statsd:statsd
+    gnocchi-amqpd = gnocchi.cli.amqpd:amqpd
     gnocchi-metricd = gnocchi.cli.metricd:metricd
     gnocchi-injector = gnocchi.cli.injector:injector
 
