--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ setenv =
 # pifpaf)
 deps =
    -e
-   .[test,redis,prometheus,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
+   .[test,redis,prometheus,amqp1,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
    {env:GNOCCHI_TEST_TARBALLS:}
    cliff!=2.9.0
 commands =
