--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,9 @@ commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-te
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
 recreate = True
+# NOTE(jd) Temporary (?) workaround for RuntimeWarning from pandas wheel
+# because of mismatch with numpy data format
+install_command = pip install --no-binary pandas --no-binary numpy {opts} {packages}
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
   gnocchiclient>=2.8.0
